[package]
name = "async-tensorrt"
description = "Async TensorRT for Rust."
keywords = ["async", "nvidia", "cuda", "gpu", "tensorrt"]
readme = "README.md"
categories = ["asynchronous"]
edition = "2021"
version = "0.9.1"
authors = ["Oddity.ai Developers <hello@oddity.ai>"]
repository = "https://github.com/oddity-ai/async-tensorrt"
license = "MIT OR Apache-2.0"

[dependencies]
async-cuda = { version = "0.6.1", path = "../async-cuda" }
cpp = "0.5"
tracing = "0.1"

[dev-dependencies]
flowly = "0.4.10"
futures = "0.3.31"
nalgebra = "0.34.1"
thiserror = "2.0.17"
async-stream = "0.3.6"
env_logger = "0.11.8"
image = "0.25.9"
log = "0.4.28"
ndarray = "0.17.1"
tempfile = "3.4"
tokio = { version = "1", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "test-util",
  "time",
] }

[build-dependencies]
cpp_build = "0.5"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "feature=\"docs-only\""]
